objects/GPO_Security__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Name__c</fullName>
        <label>Key Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Value__c</fullName>
        <label>Key Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GPO Security</label>
    <pluralLabel>GPO Security</pluralLabel>
</CustomObject>